k8s/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tambedou/backend:latest
          ports:
            - containerPort: 8021
          resources:
            requests:
              cpu: 100m  # Demande de 100 milliCPU (10% d'un CPU)
            limits:
              cpu: 500m  # Limite de 500 milliCPU (50% d'un CPU)
              
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8021
  type: ClusterIP
