k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: tambedou/mysql:8.0
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysql-storage  # Ce volume reste pour les données persistantes
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc  # Le PVC pour stocker les données de MySQL
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
